Aggiunta dei tag figure figcaption

--- a/Esercitazioni/mio-cv.html
+++ b/Esercitazioni/mio-cv.html
@@ -1,73 +1,89 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <title>Curriculum Vitae Daniele Morello</title>
-</head>
-<body>
-  <h1>Curriculum vitae</h1>
-  <h2>Daniele Morello Junior Front-End Developer</h2>
-  <img src="./assets/img/foto-cv.jpg" alt="Foto di Daniele Morello">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Curriculum Vitae Daniele Morello</title>
+  </head>
+  <body>
+    <h1>Curriculum vitae</h1>
+    <h2>Daniele Morello Junior Front-End Developer</h2>
+    <figure>
+      <img src="./assets/img/foto-cv.jpg" alt="Foto di Daniele Morello" />
+      <figcaption>Foto Foto di Daniele Morello</figcaption>
+    </figure>
 
-  <!-- Info -->
-  <h2>Info personali</h2>
-  <p>
-        Nome: Daniele<br>
-        Cognome: Morello <br>
-        Data di nascita: 06/06/87<br>
-  </p>
-  <hr>
-  
-  <!-- Cit -->
-  <h2>La mia citazione preferita:</h2>
-  <blockquote>"Sembra sempre impossibile, finché non viene fatto".</blockquote>
+    <!-- Info -->
+    <h2>Info personali</h2>
+    <p>
+      Nome: Daniele<br />
+      Cognome: Morello <br />
+      Data di nascita: 06/06/1987<br />
+    </p>
+    <hr />
+
+    <!-- Cit -->
+    <h2>La mia citazione preferita:</h2>
+    <blockquote>
+      "Sembra sempre impossibile, finché non viene fatto".
+    </blockquote>
     <cite>(Nelson Mandela)</cite>
-  <hr>
+    <hr />
 
-   <!-- Presentazione -->
-   <h2>Presentazione</h2>
-   <p>Sono uno <strong>Sviluppatore Fron-End Junior</strong> <em>"in cerca di nuove possibilità lavorative</em></p>
-   <hr>
+    <!-- Presentazione -->
+    <h2>Presentazione</h2>
+    <p>
+      Sono uno <strong>Sviluppatore Fron-End Junior</strong>
+      <em>"in cerca di nuove possibilità lavorative</em>
+    </p>
+    <hr />
 
-   <!-- Formazione -->
-   <h2>Formazione</h2>
-   <dl>
-    <dt>
-      <strong>Corso Front-End Angular</strong> 
-    </dt>
-    <dd>Relizont s.p.a<br> conseguito il 20/06/2022</dd>
+    <!-- Formazione -->
+    <h2>Formazione</h2>
+    <dl>
+      <dt>
+        <strong>Corso Front-End Angular</strong>
+      </dt>
+      <dd>
+        Relizont s.p.a<br />
+        conseguito il 20/06/2022
+      </dd>
 
-    <dt>
-      <strong>Corso Responsive Web Design</strong>
-    </dt>
-    <dd>Freecodecamp<br> conseguito nel 2021</dd>
+      <dt>
+        <strong>Corso Responsive Web Design</strong>
+      </dt>
+      <dd>
+        Freecodecamp<br />
+        conseguito nel 2021
+      </dd>
 
-    <dt>
-    <strong>Certificazione Eipass 7 Moduli</strong>  
-    </dt>
-    <dd>Euroform sede di Licata <br> conseguito nel 2014</dd>
+      <dt>
+        <strong>Certificazione Eipass 7 Moduli</strong>
+      </dt>
+      <dd>
+        Euroform sede di Licata <br />
+        conseguito nel 2014
+      </dd>
 
-     <dt><strong>Diploma scientifico</strong>
-     </dt>
-     <dd>Presso l'istituto Linares conseguito nel 2008</dd>
-   </dl>
+      <dt><strong>Diploma scientifico</strong></dt>
+      <dd>Presso l'istituto Linares conseguito nel 2008</dd>
+    </dl>
 
-   <!-- Skills -->
-   <h2>Skills</h2>
-   <ul>
-    <li>HTML5</li>
-    <li>CSS3</li>
-    <li>Javascript</li>
-    <li>Typescript(base)</li>
-    <li>Angular(base)</li>
-    <li>Git</li>
-    <li>Github</li>
-    <li>Bootstrap</li>
-    <li>Web Design Responsive</li>
-    <li>Microsoft Office</li>
-   </ul>
+    <!-- Skills -->
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>Javascript</li>
+      <li>Typescript(base)</li>
+      <li>Angular(base)</li>
+      <li>Git</li>
+      <li>Github</li>
+      <li>Bootstrap</li>
+      <li>Web Design Responsive</li>
+      <li>Microsoft Office</li>
+    </ul>
 
-   <hr>
+    <hr />
     <!-- Lingue -->
     <h2>Lingue</h2>
     <p>Inglese base</p>
@@ -84,24 +100,18 @@
 
     <!-- Contatti -->
     <h2>Contatti personali</h2>
-        <address>
-          Email: <a href="mailto:example@webdev.it">
-            example@webdev.it
-        </a>
-        <br>
-        Telefono: <a href="0123456789">
-          0123456789
-      </a>
-      <br>
-      
-        </address>
-    <hr>
+    <address>
+      Email: <a href="mailto:example@webdev.it"> example@webdev.it </a>
+      <br />
+      Telefono: <a href="0123456789"> 0123456789 </a>
+      <br />
+    </address>
+    <hr />
 
-        <!-- Footer -->
+    <!-- Footer -->
     <footer>
       <p>Autorizzo il trattamento dati secondo il decreto vigente</p>
-       <p>Daniele Morello &copy;2022 - Tutti i diritti riservati</p> 
+      <p>Daniele Morello &copy;2022 - Tutti i diritti riservati</p>
     </footer>
-        
-</body>
+  </body>
 </html>
