--- a/Esercitazioni/mio-cv.html
+++ b/Esercitazioni/mio-cv.html
@@ -2,6 +2,12 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale"
+    />
     <title>Curriculum Vitae Daniele Morello</title>
   </head>
   <body>
