aggiunta tag time

--- a/Esercitazioni/index.html
+++ b/Esercitazioni/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale"
-    />
+      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale">
     <title>Il mio curriculum vitae - Chi sono</title>
   </head>
   <body>
     <!-- Contenuti pagina: -->
     <h1>Curriculum vitae - Mario Rossi</h1>
     <h2>Web developer & programmatore</h2>
-    <hr />
+    <hr>
 
     <!-- INSERISCI UNA IMMAGINE DI "Mario Rossi"  -->
-    <img src="./assets/img/avatar.webp" alt="avatar" />
+    <figure>
+      <img src="./assets/img/avatar.webp" alt="avatar">
+      <figcaption>Avatar anonimo</figcaption>
+    </figure>
+    
 
     <!-- Info -->
     <h2>Info personali</h2>
     <address>
-      Nome: Mario<br />
-      Cognome: Rossi <br />
-      Data di nascita: 22-10-1983<br />
+      Nome: Mario<br>
+      Cognome: Rossi <br>
+      Data di nascita: 22-10-1983<br>
     </address>
-    <hr />
+    <hr>
 
     <h2>Su di me:</h2>
     <blockquote>
       "Sembra sempre impossibile, finché non viene fatto".
     </blockquote>
     <cite>(Nelson Mandela)</cite>
-    <hr />
+    <hr>
     <!-- Presentazione -->
     <h2>Presentazione</h2>
     <p>
@@ -44,10 +47,9 @@
         del riconoscimento, valutazione e certificazione delle competenze
         professionali, sia come docente in percorsi per esperti di
         certificazione, sia come consulente per agenzie formative accreditate,
-        Regioni, Province.</em
-      >
+        Regioni, Province.</em>
     </p>
-    <hr />
+    <hr>
 
     <!-- Formazione -->
     <h2>Formazione</h2>
@@ -59,13 +61,13 @@
       <li>
         <strong>Master Web Deploy</strong>
         <p>
-          Conseguito nel 2006 presso l'academy W3point.<br />
+          Conseguito nel 2006 presso l'academy W3point.<br>
           Riconosciuto in via ufficiale per crediti formativi.
         </p>
       </li>
     </ul>
 
-    <hr />
+    <hr>
 
     <!-- Competenze -->
     <h2>Competenze</h2>
@@ -79,7 +81,7 @@
       <li>Angular.js</li>
     </ul>
 
-    <hr />
+    <hr>
 
     <!-- Conoscenze operative -->
     <h2>Conoscenze operative</h2>
@@ -91,21 +93,21 @@
       <dd>Pulizia di codice inusato, minify e verifica compatibilità</dd>
     </dl>
 
-    <hr />
+    <hr>
 
     <!-- Contatti personali -->
     <h2>Contatti personali</h2>
     <address>
       Email: <a href="mailto:contatti@webdev.it"> contatti@webdev.it </a>
-      <br />
+      <br>
       Telefono: <a href="33810203040"> 338-10203040 </a>
-      <br />
+      <br>
       PEC: <a href="mailto:mariorossi@pec.it"> mariorossi@pec.it </a>
     </address>
-    <hr />
+    <hr>
 
     <!-- Footer -->
     <p>Autorizzo il trattamento dati secondo il decreto vigente</p>
-    <p>Copyright &copy;2022 - Tutti i diritti riservati</p>
+    <p>Copyright &copy;<time>2022</time> - Tutti i diritti riservati</p>
   </body>
 </html>
