--- a/Esercitazioni/mio-cv.html
+++ b/Esercitazioni/mio-cv.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale"
-    />
+      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale">
     <title>Curriculum Vitae Daniele Morello</title>
   </head>
   <body>
     <h1>Curriculum vitae</h1>
     <h2>Daniele Morello Junior Front-End Developer</h2>
     <figure>
-      <img src="./assets/img/foto-cv.jpg" alt="Foto di Daniele Morello" />
+      <img src="./assets/img/foto-cv.jpg" alt="Foto di Daniele Morello">
       <figcaption>Foto Foto di Daniele Morello</figcaption>
     </figure>
 
     <!-- Info -->
     <h2>Info personali</h2>
     <p>
-      Nome: Daniele<br />
-      Cognome: Morello <br />
-      Data di nascita: 06/06/1987<br />
+      Nome: Daniele<br>
+      Cognome: Morello <br>
+      Data di nascita: 06/06/1987
     </p>
-    <hr />
+    <hr>
 
     <!-- Cit -->
     <h2>La mia citazione preferita:</h2>
@@ -33,7 +32,7 @@
       "Sembra sempre impossibile, finché non viene fatto".
     </blockquote>
     <cite>(Nelson Mandela)</cite>
-    <hr />
+    <hr>
 
     <!-- Presentazione -->
     <h2>Presentazione</h2>
@@ -41,7 +40,7 @@
       Sono uno <strong>Sviluppatore Fron-End Junior</strong>
       <em>"in cerca di nuove possibilità lavorative</em>
     </p>
-    <hr />
+    <hr>
 
     <!-- Formazione -->
     <h2>Formazione</h2>
@@ -50,28 +49,28 @@
         <strong>Corso Front-End Angular</strong>
       </dt>
       <dd>
-        Relizont s.p.a<br />
-        conseguito il 20/06/2022
+        Relizont s.p.a<br>
+        conseguito il 20/06/2022 
       </dd>
 
       <dt>
         <strong>Corso Responsive Web Design</strong>
       </dt>
       <dd>
-        Freecodecamp<br />
-        conseguito nel 2021
+        Freecodecamp<br>
+        conseguito nel <time>2021</time> 
       </dd>
 
       <dt>
         <strong>Certificazione Eipass 7 Moduli</strong>
       </dt>
       <dd>
-        Euroform sede di Licata <br />
-        conseguito nel 2014
+        Euroform sede di Licata <br>
+        conseguito nel <time>2014</time> 
       </dd>
 
       <dt><strong>Diploma scientifico</strong></dt>
-      <dd>Presso l'istituto Linares conseguito nel 2008</dd>
+      <dd>Presso l'istituto Linares conseguito nel <time>2008</time></dd>
     </dl>
 
     <!-- Skills -->
@@ -89,7 +88,7 @@
       <li>Microsoft Office</li>
     </ul>
 
-    <hr />
+    <hr>
     <!-- Lingue -->
     <h2>Lingue</h2>
     <p>Inglese base</p>
@@ -108,16 +107,16 @@
     <h2>Contatti personali</h2>
     <address>
       Email: <a href="mailto:example@webdev.it"> example@webdev.it </a>
-      <br />
+      <br>
       Telefono: <a href="0123456789"> 0123456789 </a>
-      <br />
+      <br>
     </address>
-    <hr />
+    <hr>
 
     <!-- Footer -->
     <footer>
       <p>Autorizzo il trattamento dati secondo il decreto vigente</p>
-      <p>Daniele Morello &copy;2022 - Tutti i diritti riservati</p>
+      <p>Daniele Morello &copy; <time>2022</time> - Tutti i diritti riservati</p>
     </footer>
   </body>
 </html>
