Aggiunta cartella e tag semantici

--- a/Esercitazioni/12settembre/index.html
+++ b/Esercitazioni/12settembre/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="it">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta
-      name="description"
-      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale">
-    <title>Il mio curriculum vitae - Chi sono</title>
-  </head>
-  <body>
-    <!-- Contenuti pagina: -->
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale">
+  <title>Il mio curriculum vitae - Chi sono</title>
+</head>
+
+<body>
+  <!-- Contenuti pagina: -->
+  <header>
     <h1>Curriculum vitae - Mario Rossi</h1>
-    <h2>Web developer & programmatore</h2>
+  </header>
+
+  <main>
     <hr>
+    <h2>Web developer & programmatore</h2>
 
     <!-- INSERISCI UNA IMMAGINE DI "Mario Rossi"  -->
     <figure>
-      <img src="./assets/img/avatar.webp" alt="avatar">
+      <img src="../assets/img/avatar.webp" alt="avatar">
       <figcaption>Avatar anonimo</figcaption>
     </figure>
-    
+    <hr>
 
     <!-- Info -->
     <h2>Info personali</h2>
@@ -41,8 +46,7 @@
     <h2>Presentazione</h2>
     <p>
       Lavoro come <strong>consulente e formatore</strong> in qualità di libero
-      professionista secondo il motto<em
-        >"Fai della tua passione un lavoro e non lavorerai nemmeno per 1
+      professionista secondo il motto<em>"Fai della tua passione un lavoro e non lavorerai nemmeno per 1
         giorno". Collaboro con strutture pubbliche e private trattando il tema
         del riconoscimento, valutazione e certificazione delle competenze
         professionali, sia come docente in percorsi per esperti di
@@ -105,9 +109,14 @@
       PEC: <a href="mailto:mariorossi@pec.it"> mariorossi@pec.it </a>
     </address>
     <hr>
+  </main>
 
-    <!-- Footer -->
+  <!-- Footer -->
+  <footer>
     <p>Autorizzo il trattamento dati secondo il decreto vigente</p>
     <p>Copyright &copy;<time>2022</time> - Tutti i diritti riservati</p>
-  </body>
+  </footer>
+
+</body>
+
 </html>
