--- a/Esercitazioni/12settembre/mio-cv.html
+++ b/Esercitazioni/12settembre/mio-cv.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale"
-    />
+      content="Il mio curriculum: profilo, competenze ed esperienze maturate ad oggi in ambito professionale">
     <title>Curriculum Vitae Daniele Morello</title>
   </head>
   <body>
@@ -16,23 +15,23 @@
     </header>
 
     <main>
-      <hr />
+      <hr>
 
       <h2>Daniele Morello Junior Front-End Developer</h2>
       <figure>
-        <img src="../assets/img/foto-cv.jpg" alt="Foto di Daniele Morello" />
+        <img src="../assets/img/foto-cv.jpg" alt="Foto di Daniele Morello">
         <figcaption>Foto Foto di Daniele Morello</figcaption>
       </figure>
-      <hr />
+      <hr>
 
       <!-- Info -->
       <h2>Info personali</h2>
       <p>
-        Nome: Daniele<br />
-        Cognome: Morello <br />
+        Nome: Daniele<br>
+        Cognome: Morello <br>
         Data di nascita: 06/06/1987
       </p>
-      <hr />
+      <hr>
 
       <!-- Cit -->
       <h2>La mia citazione preferita:</h2>
@@ -40,7 +39,7 @@
         "Sembra sempre impossibile, finché non viene fatto".
       </blockquote>
       <cite>(Nelson Mandela)</cite>
-      <hr />
+      <hr>
 
       <!-- Presentazione -->
       <h2>Presentazione</h2>
@@ -48,7 +47,7 @@
         Sono uno <strong>Sviluppatore Fron-End Junior</strong>
         <em>"in cerca di nuove possibilità lavorative</em>
       </p>
-      <hr />
+      <hr>
 
       <!-- Formazione -->
       <h2>Formazione</h2>
@@ -57,7 +56,7 @@
           <strong>Corso Front-End Angular</strong>
         </dt>
         <dd>
-          Relizont s.p.a<br />
+          Relizont s.p.a<br>
           conseguito il 20/06/2022
         </dd>
 
@@ -65,7 +64,7 @@
           <strong>Corso Responsive Web Design</strong>
         </dt>
         <dd>
-          Freecodecamp<br />
+          Freecodecamp<br>
           conseguito nel <time>2021</time>
         </dd>
 
@@ -73,7 +72,7 @@
           <strong>Certificazione Eipass 7 Moduli</strong>
         </dt>
         <dd>
-          Euroform sede di Licata <br />
+          Euroform sede di Licata <br>
           conseguito nel <time>2014</time>
         </dd>
 
@@ -96,7 +95,7 @@
         <li>Microsoft Office</li>
       </ul>
 
-      <hr />
+      <hr>
       <!-- Lingue -->
       <h2>Lingue</h2>
       <p>Inglese base</p>
@@ -110,17 +109,17 @@
         <li>Cinema</li>
         <li>Animali</li>
       </ul>
-      <hr />
+      <hr>
 
       <!-- Contatti -->
       <h2>Contatti personali</h2>
       <address>
         Email: <a href="mailto:example@webdev.it"> example@webdev.it </a>
-        <br />
+        <br>
         Telefono: <a href="0123456789"> 0123456789 </a>
-        <br />
+        <br>
       </address>
-      <hr />
+      <hr>
     </main>
 
     <!-- Footer -->
